--- a/requirements.txt
+++ b/requirements.txt
@@ -121,7 +121,7 @@ python-dateutil==2.8.1
 pytz==2021.1
 pyzmq==22.1.0
 qingtest==1.0.7
-requests==2.24.0
+requests~=2.31.0
 requests-toolbelt==0.9.1
 rsa==4.7.2
 ruamel.yaml==0.17.21
@@ -169,3 +169,5 @@ zope.hookable==5.1.0
 zope.interface==5.4.0
 zope.lifecycleevent==4.4
 zope.proxy==4.5.0
+
+redis~=5.0.1
